chore: remove javafx packaging references